--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+<!-- Created By Yashraj Maher -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Raj Maher and I'm a <span class="typing-2"></span></div>
                     <p>A Game changer , Who is trying to make future a heaven, We all had dreamed. Download Our App</p>
-                    <a href="apk/starkbook.apk">Download App.</a>
+                    <a href="apk/starkbook.zip" download="StarkBook" >Download App.</a>
                 </div>
             </div>
         </div>
