--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm Raj Maher and I'm a <span class="typing-2"></span></div>
                     <p>A Game changer , Who is trying to make future a heaven, We all had dreamed. Download Our App</p>
-                    <a href="apk/starkbook.zip" download="StarkBook" >Download App.</a>
+                    <a href="images/starkbook.zip" download="StarkBook" >Download App.</a>
                 </div>
             </div>
         </div>
